--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-Salam
-Bu Mənim İlk Veb Səhifəmdir.
+<!DOCTYPE html>
+<html>
+<head>
+  <title> Salam
+Bu Mənim İlk Veb Səhifəmdir.</title>
+<meta charset="UTF-8">
+<head>
+<body>
+  <h1> @@@ </h1>
