--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ Bu Mənim İlk Veb Səhifəmdir.</title>
 <meta charset="UTF-8">
 <head>
 <body>
-  <h1> @@@ </h1>
+  <h1>                          Ilk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
