--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title> Salam
 Bu Mənim İlk Veb Səhifəmdir.</title>
+  <link rel="stylesheed" href="style.css">
 <meta charset="UTF-8">
 <head>
 <body>
