--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title> Salam
 Bu Mənim İlk Veb Səhifəmdir.</title>
-  <link rel="stylesheed" href="style.css">
+  <link rel="stylesheet" href="style.css">
 <meta charset="UTF-8">
 <head>
 <body>
