--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ Bu Mənim İlk Veb Səhifəmdir.</title>
 <body>
   <h1>                          Ilk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
 <p>
-  <button> meni klikle </button>
+  <button> meni klikle <button>
 </body>
