--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@ Bu Mənim İlk Veb Səhifəmdir.</title>
   <h1>Ilk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
 <p>
   <button> meni klikle <button>
+    <button> qeydiyyat </button>
 </body>
