--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title> Salam
 Bu Mənim İlk Veb Səhifəmdir.</title>
   <link rel="stylesheet" href="style.css">
+  <a herf="https://google.com" target="_blank">
+    <button> qeydiyyat </button>
 <meta charset="UTF-8">
 <head>
 <body>
