--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ Bu Mənim İlk Veb Səhifəmdir.</title>
 <body>
   <h1>Ilk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
 <p>
+  <!--qeydiyyat-->
+
     <a herf="https://google.com" target="_blank">
   </a>
   <button> meni klikle <button>
