--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ Bu Mənim İlk Veb Səhifəmdir.</title>
     <a herf="https://google.com" target="_blank">
   <button> meni klikle <button>
       </a>
-    <button> qeydiyyat </button>
- 
 </body>
+</html>
+    
