--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title> Salam
-Bu Mənim İlk Veb Səhifəmdir.</title>
+                                                      Bu Mənim İlk Veb Səhifəmdir.</title>
   <link rel="stylesheet" href="style.css">
 <meta charset="UTF-8">
 <head>
 <body>
-  <h1>Ilk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
+  <h1>İlk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
 <p>
   <!--qeydiyyat-->
     <a herf="https://google.com" target="_blank">
