--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Salam
-                                                      Bu Mənim İlk Veb Səhifəmdir.</title>
+  <title> GitHub</title>
   <link rel="stylesheet" href="style.css">
 <meta charset="UTF-8">
 <head>
 <body>
-  <h1>İlk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
+                                                <h1>İlk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
 <p>
   <!--qeydiyyat-->
     <a herf="https://google.com" target="_blank">
