--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 <meta charset="UTF-8">
 <head>
 <body>
-  <h1>                                                                          İlk Veb Saytımdan Vüsal Müəllimə Salam :) </h1>
+  <h1>                                                                          İlk Veb Saytımdan Səbinəyə Salam :) </h1>
 <p>
-  <!--qeydiyyat-->
-    <a herf="https://google.com" target="_blank">
+    <a herf="https://google.com" target="blank">
   <button> meni klikle <button>
       </a>
 </body>
