--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="az">
 <head>
   <title> GitHub</title>
   <link rel="stylesheet" href="style.css">
 <meta charset="UTF-8">
 <head>
 <body>
-  <h1>                                                                          İlk Veb Saytımdan Səbinəyə Salam :) </h1>
+  <h1>                                                                          İlk Veb Saytımdan Hərkəsə Salam :) </h1>
 <p>
-    <a herf="https://google.com" target="blank">
+      <!-- ✅ Keçidli düymə -->
+  <a href="https://www.google.com" target="_blank" class="my-button">Google-a keç</a>
   <button> meni klikle <button>
       </a>
 </body>
