--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <a href="https://www.google.com" target="_blank" class="my-button">Google-a keç</a>
   <button> meni klikle <button>
       </a>
+    <nav>
+      <ul>
+        <li><a herf="#">ANA SƏHİFƏ</a></li>
+        <li><a herf="#">MƏHSULLAR</a></li>
+        <li><a herf="#">HAQQIMIZDA</a></li>
+      </ul>
+    </nav>
 </body>
 </html>
     
