--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <h1>                                                                          İlk Veb Saytımdan Hərkəsə Salam :) </h1>
 <p>
       <!-- ✅ Keçidli düymə -->
-  <a href="https://www.google.com" target="_blank" class="my-button">Google-a keç</a>
-  <button> meni klikle <button>
+  <a href="https://www.google.com" target="_blank" class="my-button">Qeydiyyat</a>
       </a>
     <nav>
       <ul>
