--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       </a>
     <nav>
       <ul>
+        <!-- ✅ Keçidli düymə -->
+          <a href="https://www.google.com" target="_blank" class="my-button">ANA SƏHİFƏ</a>
         <li><a herf="#">ANA SƏHİFƏ</a></li>
         <li><a herf="#">MƏHSULLAR</a></li>
         <li><a herf="#">HAQQIMIZDA</a></li>
