--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <a href="https://www.google.com" target="_blank" class="my-button">Qeydiyyat</a>
       </a>
     <nav>
+  <div class="nav-container">
+    <!-- LOGO (şəkil) -->
+    <div class="logo">
+      <img src="logo.png" alt="Logo" />
+    </div>
       <ul>
         <!-- ✅ Keçidli düymə -->
           <a href="https://www.google.com" target="_blank" class="my-button">ANA SƏHİFƏ</a>
