--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
   <div class="nav-container">
     <!-- LOGO (şəkil) -->
     <div class="logo">
-      <img src="logo.png" alt="Logo" />
+      <img src="şəkil.jpg" alt="Logo" />
     </div>
       <ul>
         <!-- ✅ Keçidli düymə -->
-          <a href="https://www.google.com" target="_blank" class="my-button">ANA SƏHİFƏ</a>
-        <li><a herf="#">ANA SƏHİFƏ</a></li>
-        <li><a herf="#">MƏHSULLAR</a></li>
-        <li><a herf="#">HAQQIMIZDA</a></li>
+          <a href="https://www.google.com" target="_blank" class="my-button">Ana Səhifə</a>
+          <a href="https://www.google.com" target="_blank" class="my-button">Haqqımızda</a>
+          <a href="https://www.google.com" target="_blank" class="my-button">Əlaqə</a>
       </ul>
     </nav>
 </body>
